@@ -1,0 +1,15 @@
+Created by #{link_to_member(@project, issue.author)}
+- if issue.assignee
+  \ and currently assigned to #{link_to_member(@project, issue.assignee)}
+
+- if issue.milestone
+  - milestone = issue.milestone
+  %cite.cgray and attached to milestone
+  %strong= link_to_gfm truncate(milestone.title, length: 20), project_milestone_path(milestone.project, milestone)
+
+.pull-right
+  - issue.labels.each do |label|
+    %span{class: "label #{label_css_class(label.name)}"}
+      %i.icon-tag
+      = label.name
+    &nbsp;
